--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Modificar.cshtml
@@ -45,7 +45,15 @@
             <div class="col-md-offset-4 col-md-2">
                 <div class="form-group">
                     <label for="Cod_Depreciacion">Fecha*</label>
-                    @Html.TextBoxFor(q => q.Fecha_Depreciacion, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_Depreciacion" })
+                    @Html.DevExpress().DateEditFor(q=> q.Fecha_Depreciacion, settings =>
+                {
+                    settings.Name = "Fecha_Depreciacion";
+                    settings.Properties.UseMaskBehavior = true;
+                    settings.Properties.EditFormat = EditFormat.Date;
+                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Fecha_Depreciacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -99,10 +107,10 @@
 }
 <script>
     $(function () {
-        //Date picker
-        $('#Fecha_Depreciacion').datepicker({
-            autoclose: true
-        })
+        $("#IdPeriodo").change(function () {
+            Get_list_activos_a_depreciar();
+        });
+
     });
 
     function Get_list_activos_a_depreciar() {
