--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Nuevo.cshtml
@@ -40,8 +40,16 @@
             </div>
             <div class="col-md-offset-5 col-md-2">
                 <div class="form-group">
-                    <label for="Cod_Depreciacion">Fecha*</label>
-                    @Html.TextBoxFor(q => q.Fecha_Depreciacion, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_Depreciacion" })
+                    <label for="Fecha_Depreciacion">Fecha*</label>
+                    @Html.DevExpress().DateEditFor(q=> q.Fecha_Depreciacion, settings =>
+                {
+                    settings.Name = "Fecha_Depreciacion";
+                    settings.Properties.UseMaskBehavior = true;
+                    settings.Properties.EditFormat = EditFormat.Date;
+                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Fecha_Depreciacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -95,11 +103,6 @@
 }
 <script>
     $(function () {
-        //Date picker
-        $('#Fecha_Depreciacion').datepicker({
-            autoclose: true
-        })
-
         $("#IdPeriodo").change(function () {
             Get_list_activos_a_depreciar();
         });
