--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Nuevo.cshtml
@@ -40,7 +40,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha_Venta, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_Venta" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha_Venta, settings =>
+                    {
+                        settings.Name = "Fecha_Venta";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Venta, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -189,15 +197,11 @@
 }
 <script>
         $(function () {
-            //Date picker
-            $('#Fecha_Venta').datepicker({
-                autoclose: true
-            })
-        })
-
      $("#IdActivoFijo").change(function () {
             get_valores();
         });
+        })
+
 
     function get_valores(){
 
