--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Anular.cshtml
@@ -8,14 +8,7 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-
 <script type="text/javascript">
-    $(function () {
-        //Date picker
-        $('#cb_Fecha').datepicker({
-            autoclose: true
-        })
-    });
     var selectedIDs;
     function OnBeginCallback(s, e) {
         e.customArgs["IdTipo_Persona"] = $("#IdTipo_Persona").val();
@@ -186,7 +179,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.cb_Fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "cb_Fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.cb_Fecha, settings =>
+                    {
+                        settings.Name = "cb_Fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.cb_Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
