--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -19,7 +19,7 @@
         });
         $("#IdTipo_Persona").change(function () {
             vaciar_detalles();
-            IdEntidad.SetValue("");
+            IdEntidad.SetValue(null);
         });
     });
     var selectedIDs;
