--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
@@ -18,7 +18,7 @@
         });
         $("#IdTipo_Persona").change(function () {
             vaciar_detalles();
-            IdEntidad.SetValue("");
+            IdEntidad.SetValue(null);
             $("#cb_giradoA").val("");
         });
         GetNumCheque();
