--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Nuevo.cshtml
@@ -41,22 +41,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
-               {
-                   settings.Name = "IdSucursal";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdSucursal", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Su_Descripcion", "Descripcion").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdSucursal";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "Su_Descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_sucursal).GetHtml()
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
