--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/_CmbPersona_MovimientoEgreso.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/_CmbPersona_MovimientoEgreso.cshtml
@@ -21,7 +21,7 @@
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipoPersona').val(); }";
     })
     .BindList(new Core.Erp.Web.Areas.Caja.Controllers.CajaMovimientoEgresoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Caja.Controllers.CajaMovimientoEgresoController().get_info_bajo_demanda)
-    .Bind(Model.IdEntidad);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Caja.caj_Caja_Movimiento_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
