--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/_CmbPersona_MovimientoIngreso.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/_CmbPersona_MovimientoIngreso.cshtml
@@ -17,6 +17,7 @@
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Persona", 80);
         settings.Properties.Columns.Add("IdPersona", "ID Persona", 10);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipoPersona').val(); }";
     })
