--- a/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_CmbPersona_Compras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_CmbPersona_Compras.cshtml
@@ -2,7 +2,7 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdEntidad";
+        settings.Name = "IdPersona";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
@@ -17,11 +17,12 @@
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Persona", 80);
         settings.Properties.Columns.Add("IdPersona", "ID Persona", 10);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipoPersona').val(); }";
     })
     .BindList(new Core.Erp.Web.Areas.Compras.Controllers.CompradorController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Compras.Controllers.CompradorController().get_info_bajo_demanda)
-    .Bind(Model.IdPersona);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Compras.com_comprador_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
