--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/Anular.cshtml
@@ -32,7 +32,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.af_fechaIni, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "af_fechaIni" })
+                        @Html.DevExpress().DateEditFor(q=> q.af_fechaIni, settings =>
+                    {
+                        settings.Name = "af_fechaIni";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.af_fechaIni, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -45,7 +53,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.af_fechaFin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "af_fechaFin" })
+                        @Html.DevExpress().DateEditFor(q=> q.af_fechaFin, settings =>
+                    {
+                        settings.Name = "af_fechaFin";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.af_fechaFin, "", new { @class = "text-danger" })
                     </div>
                 </div>
