--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -9,13 +9,21 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
+<script>
 
+    function MostarPrecios() {
+        $("#contrasena_admin").val("");
+        $("#ModalMostrarPrecios").modal("show");
+
+    }
+
+</script>
 @using (Html.BeginForm("Nuevo", "Producto", FormMethod.Post, new { @class = "form", @rolw = "form" }))
 {
 
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTransaccionSession)
-
+    @Html.HiddenFor(q => q.IdProducto, new { @id = "IdProducto" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -118,7 +126,14 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="row">
+                <div class="col-md-12">
+
+                    <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostarPrecios();">
+                        <i class="fa fa-lock"></i> Mostrar precios
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -457,6 +472,39 @@
         </div>
     </div>
 
+    <div class="modal fade" id="ModalMostrarPrecios" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Ingrese la contraseña Administrador</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group has-feedback">
+                                @Html.TextBoxFor(q => q.IdUsuarioAut, new { @class = "form-control", @placeholder = "Usuario", @id = "IdUsuarioAut" })
+                                <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
+                            </div>
+                            <div class="form-group has-feedback">
+                                @Html.PasswordFor(q => q.contrasena_admin, new { @class = "form-control", @placeholder = "Contraseña desbloqueo", @id = "contrasena_admin" })
+                                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <button type="button" class="btn btn-primary" onclick="MostrarPrecios();">Mostrar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
      <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "Producto", new { Area = "Inventario" }, null)">Cancelar</a>
@@ -473,7 +521,7 @@
             $('#lote_fecha_fab').datepicker({
                 autoclose: true
             })
-
+            $("#link_precios").hide();
             cargar_lineas();
             cargar_grupos();
             cargar_subgrupos();
@@ -940,7 +988,38 @@
 
 
 
+    function MostrarPrecios() {
 
+        var datos = {
+            IdUsuarioAut: $("#IdUsuarioAut").val(),
+            contrasena_admin: $("#contrasena_admin").val(),
+            IdProducto: $("#IdProducto").val(),
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("MostrarPrecios", "Producto",new { Area = "Inventario"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data == "AUTORIZADO") {
+                    $("#link_precios").show();
+                   
+                }
+                else {
+                    $("#link_precios").hide();
+
+                }
+
+            },
+            error: function (error) {
+            }
+        });
+        $("#ModalMostrarPrecios").modal("hide");
+    }
 
 
 </script>
